Brands marquee z-index bug fixed

--- a/src/assets/styles/Brands.css
+++ b/src/assets/styles/Brands.css
@@ -17,3 +17,7 @@
 .brands .brand-logo img {
   width: 75%;
 }
+
+.brands .marquee-container {
+  z-index: 1;
+}
